# bdsp_dig_generator

./: Cargo.toml  DepositItemRawData.json  StoneBoxRawData.json  UgItemTable.json  english_dp_underground_name.json  english_ss_itemname.json
.github/workflows/: rust.yml
src/: deposit_item_data.rs  item_name.rs  lib.rs  main.rs  stone_box_data.rs  ug_item_table.rs  xorshift.rs
