[package]
name = "bdsp_dig_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
clap = { version = "3.2.17", features = ['derive'], optional = true}

[features]
build-binary = ["clap"]

[[bin]]
name = "bdsp_dig_generator"
required-features = ["build-binary"]